# advent-of-code-ocaml

./: aoc2021.opam  aoc_helpers.opam  dune-project
aoc2021/: dune  runner.ml
aoc2021/days/: day3.ml  dune
aoc_helpers/: dune  io.mli  runners.ml
src/2021/: day3.ml  dune
src/lib/: io.ml
